--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -481,6 +481,8 @@ body._lock {
 /*-------------------------------------------------------------*/
 
 .approach {
+  margin-bottom: 120px;
+
   &__title {
     font-weight: 900;
     font-size: 45px;
@@ -617,6 +619,103 @@ body._lock {
 
   &__wrapper {
     max-width: 430px;
+  }
+
+  &__image {
+    width: 100%;
+  }
+}
+
+/*-------------------------------------------------------------*/
+/*-----Action--------------------------------------------------*/
+/*-------------------------------------------------------------*/
+
+.page__action {
+  margin-bottom: 100px;
+}
+
+.action {
+  &__title {
+    font-weight: 900;
+    font-size: 45px;
+    line-height: 50px;
+    text-align: center;
+    max-width: 690px;
+    margin-bottom: 30px;
+  }
+
+  &__subtitle {
+    margin: 0 auto;
+    max-width: 690px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 32px;
+    text-align: center;
+    color: #444444;
+    margin-bottom: 60px;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 100px 50px;
+  }
+
+  &__body {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px 60px;
+  }
+
+  &__text {
+    max-width: 550px;
+  }
+
+  &__heading {
+    font-weight: 900;
+    font-size: 30px;
+    line-height: 46px;
+    margin-bottom: 15px;
+    & span {
+      text-transform: uppercase;
+    }
+
+    text-transform: lowercase;
+  }
+
+  &__paragraph {
+    font-size: 18px;
+    line-height: 32px;
+    color: #444444;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+
+    & span {
+      font-weight: 900;
+      font-size: 24px;
+      line-height: 32px;
+      color: #0ebed9;
+    }
+  }
+
+  &__button {
+    padding: 30px 40px;
+    background: linear-gradient(94.75deg, #ffa945 0%, #ff9345 99.41%);
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 14px;
+    text-align: center;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+
+  &__wrapper {
+    max-width: 580px;
   }
 
   &__image {
