--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -248,6 +248,132 @@ body._lock {
 /*-----About---------------------------------------------------*/
 /*-------------------------------------------------------------*/
 
+.page__reviews {
+  margin-bottom: 200px;
+}
+
+.reviews {
+  background: linear-gradient(101.72deg, #07085b 0%, #0c0c50 98.53%);
+
+  &__container {
+    position: relative;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__vector {
+    position: absolute;
+    &:nth-of-type(3) {
+      left: 50%;
+      transform: translate(-50%);
+    }
+
+    &:nth-of-type(4) {
+      left: -100px;
+      bottom: -150px;
+    }
+
+    &:nth-of-type(5) {
+      left: -250px;
+      bottom: -150px;
+    }
+
+    &:nth-of-type(6) {
+      right: -100px;
+      top: -100px;
+    }
+
+    &:nth-of-type(7) {
+      right: -250px;
+      top: -90px;
+    }
+  }
+
+  &__star {
+    position: absolute;
+    &:nth-of-type(8) {
+      left: -50px;
+      top: 100px;
+    }
+
+    &:nth-of-type(9) {
+      left: 200px;
+      bottom: 200px;
+    }
+
+    &:nth-of-type(10) {
+      right: 100px;
+      bottom: 100px;
+    }
+
+    &:nth-of-type(11) {
+      right: 400px;
+      bottom: 130px;
+    }
+
+    &:nth-of-type(12) {
+      right: 320px;
+      top: 60px;
+    }
+
+    &:nth-of-type(13) {
+      right: -50px;
+      bottom: 280px;
+    }
+
+    &:nth-of-type(14) {
+      left: -130px;
+      bottom: 350px;
+    }
+
+    &:nth-of-type(15) {
+      right: 100px;
+      top: 280px;
+    }
+  }
+
+  &__quote {
+    width: 54px;
+    height: 54px;
+    margin-bottom: 15px;
+  }
+
+  &__paragraph {
+    max-width: 800px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 34px;
+    text-align: center;
+    color: #ffffff;
+
+    margin-bottom: 65px;
+    &:last-child {
+      margin-bottom: 45px;
+    }
+  }
+
+  &__image {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
+  }
+  &__name {
+    font-weight: 900;
+    font-size: 25px;
+    line-height: 25px;
+    text-align: center;
+    color: #ffffff;
+  }
+}
+
+/*-------------------------------------------------------------*/
+/*-----About---------------------------------------------------*/
+/*-------------------------------------------------------------*/
+
 .page__about {
   margin-bottom: 100px;
 }
