--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -245,7 +245,7 @@ body._lock {
 }
 
 /*-------------------------------------------------------------*/
-/*-----About---------------------------------------------------*/
+/*-----Reviews-------------------------------------------------*/
 /*-------------------------------------------------------------*/
 
 .page__reviews {
@@ -904,6 +904,120 @@ body._lock {
       width: 42px;
       height: 42px;
     }
+  }
+}
+
+/*-------------------------------------------------------------*/
+/*-----Opinion-------------------------------------------------*/
+/*-------------------------------------------------------------*/
+
+.page__opinion {
+  margin-bottom: 180px;
+}
+
+.opinion {
+  background: linear-gradient(101.72deg, #07085b 0%, #0c0c50 98.53%);
+
+  &__container {
+    position: relative;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__vector {
+    position: absolute;
+    &:nth-of-type(2) {
+      top: 0;
+      right: 50px;
+    }
+
+    &:nth-of-type(3) {
+      left: -100px;
+      bottom: -150px;
+    }
+
+    &:nth-of-type(4) {
+      left: -250px;
+      bottom: -150px;
+    }
+
+  }
+
+  &__star {
+    position: absolute;
+    &:nth-of-type(5) {
+      left: 300px;
+      top: 100px;
+    }
+
+    &:nth-of-type(6) {
+      left: -100px;
+      bottom: 300px;
+    }
+
+    &:nth-of-type(7) {
+      right: 100px;
+      bottom: 100px;
+    }
+
+    &:nth-of-type(8) {
+      right: 400px;
+      bottom: 130px;
+    }
+
+    &:nth-of-type(9) {
+      right: 320px;
+      top: 60px;
+    }
+
+    &:nth-of-type(10) {
+      right: -50px;
+      bottom: 280px;
+    }
+
+    &:nth-of-type(11) {
+      left: -130px;
+      bottom: 350px;
+    }
+
+    &:nth-of-type(12) {
+      right: 100px;
+      top: 280px;
+    }
+  }
+
+  &__heading {
+    max-width: 400px;
+    font-size: 48px;
+    line-height: 150%;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+
+  &__quote {
+    width: 54px;
+    height: 54px;
+    margin-bottom: 25px;
+  }
+
+  &__paragraph {
+    max-width: 800px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 34px;
+    color: #ffffff;
+    margin-bottom: 35px;
+  }
+
+  &__name {
+    font-weight: 900;
+    font-size: 25px;
+    line-height: 25px;
+    color: #ffffff;
   }
 }
 
