--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -825,7 +825,6 @@ body._lock {
     }
   }
 
-
   &__paragraph {
     max-width: 800px;
     font-weight: 400;
@@ -887,7 +886,7 @@ body._lock {
       color: #0ebed9;
     }
 
-    .result__hide{
+    .result__hide {
       position: absolute;
       right: 20px;
       top: 25px;
@@ -1003,11 +1002,218 @@ body._lock {
 }
 
 /*-------------------------------------------------------------*/
+/*-----Education-----------------------------------------------*/
+/*-------------------------------------------------------------*/
+
+.universities {
+  margin-bottom: 120px;
+
+  &__title {
+    font-weight: 900;
+    font-size: 45px;
+    line-height: 50px;
+    text-align: center;
+    max-width: 690px;
+    margin-bottom: 40px;
+  }
+
+  &__filters {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-bottom: 30px;
+  }
+
+  &__filter {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #0ebed9;
+  }
+
+  &__body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px 160px;
+    margin-bottom: 75px;
+  }
+
+  &__wrapper {
+    max-width: 470px;
+    position: relative;
+    & h5 {
+      position: absolute;
+      font-weight: 900;
+      font-size: 20px;
+      line-height: 110%;
+      text-align: center;
+      text-transform: uppercase;
+      background: #ffffff;
+      border-radius: 50%;
+
+      &:first-of-type {
+        top: 50%;
+        right: -115px;
+        transform: translateY(-50%);
+        padding: 48px 20px;
+        color: #0ebed9;
+        box-shadow: 0px 4px 40px rgba(14, 190, 217, 0.2);
+      }
+
+      &:nth-of-type(2) {
+        bottom: -10px;
+        left: -40px;
+        padding: 40px 20px;
+        color: #6fa926;
+        box-shadow: 0px 4px 40px rgba(111, 169, 38, 0.25);
+      }
+
+      &:nth-of-type(3) {
+        top: 160px;
+        left: -50px;
+        padding: 25px 20px;
+        color: #ffa945;
+        box-shadow: 0px 4px 40px rgba(255, 169, 69, 0.25);
+      }
+
+      &:nth-of-type(4) {
+        top: -30px;
+        left: -10px;
+        color: #ae99f0;
+        padding: 40px 20px;
+        box-shadow: 0px 4px 40px rgba(171, 152, 245, 0.25);
+      }
+
+      &:nth-of-type(5) {
+        top: -90px;
+        left: 130px;
+        padding: 28px 15px;
+        color: #f198c7;
+        box-shadow: 0px 4px 40px rgba(244, 152, 197, 0.25);
+      }
+    }
+  }
+
+  &__image {
+    width: 100%;
+    &:nth-child(2) {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 166px;
+      max-height: 166px;
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 100px 50px;
+  }
+
+  &__text {
+    max-width: 500px;
+  }
+
+  &__heading {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    color: #444444;
+    margin-bottom: 30px;
+  }
+
+  &__subheading {
+    font-weight: 900;
+    font-size: 60px;
+    line-height: 60px;
+    color: #0ebed9;
+    margin-bottom: 15px;
+  }
+
+  &__paragraph {
+    font-size: 18px;
+    line-height: 32px;
+    color: #444444;
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__specialties {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  &__speciality {
+    font-size: 16px;
+    line-height: 26px;
+    color: #444444;
+  }
+
+  &__subjects {
+    .subjects__title {
+      flex: 1 1 55%;
+      max-width: 570px;
+      max-height: 100px;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 34px;
+      color: #444444;
+    }
+
+    .subjects__programs {
+      display: flex;
+      justify-content: center;
+      gap: 40px 30px;
+      flex-wrap: wrap;
+    }
+
+    .program {
+      flex: 1 1 20%;
+      max-width: 270px;
+      display: flex;
+      flex-direction: column;
+      justify-content: baseline;
+
+      // &:first-of-type{
+      //   flex: 1 1 100%;
+      // }
+
+      .program__image {
+        width: 100%;
+        max-width: 48px;
+        margin-bottom: 10px;
+      }
+
+      .program__name {
+        font-size: 15px;
+        line-height: 22px;
+        color: #444444;
+      }
+
+      .program__university {
+        font-weight: 900;
+        font-size: 14px;
+        line-height: 22px;
+        color: #0ebed9;
+      }
+    }
+  }
+}
+
+/*-------------------------------------------------------------*/
 /*-----Stories-------------------------------------------------*/
 /*-------------------------------------------------------------*/
 
 .page__stories {
-  margin-bottom: 200px;
+  margin-bottom: 90px;
 }
 
 .stories {
@@ -1222,7 +1428,8 @@ body._lock {
 /*-------------------------------------------------------------*/
 
 .step {
-  margin-bottom: 120px;
+  background: #F5F8FF;
+  padding: 80px;
 
   &__text {
     max-width: 500px;
